fix hoàn chỉnh