@@ -1,7 +1,5 @@
 package vn.swp391.fa2025.evrental.config;
 
-import java.util.Arrays;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -16,6 +14,9 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+import java.util.Arrays;
+import java.util.List;
 
 /**
  * Spring Security Configuration for JWT-based authentication
@@ -34,28 +35,36 @@ public class SecurityConfig {
                 .csrf(csrf -> csrf.disable())
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-    // public endpoit, ko can authen
-    .requestMatchers("/auth/**", "/", "/hello", "/error", "/vehiclemodel", "/showactivestation",
-            "/vehiclemodel/getvehicelmodeldetail")
-    .permitAll()
+                        // public endpoit, ko can authen
+                        .requestMatchers("/auth/**", "/", "/hello", "/error", "/vehiclemodel", "/showactivestation",
+                                "/vehiclemodel/getvehicelmodeldetail")
+                        .permitAll()
 
-    // cho phep truy cap thu muc
-    .requestMatchers("/EVRental/**", "/**.jpg", "/**.jpeg", "/**.png").permitAll()
+                        // cho phep truy cap thu muc
+                        .requestMatchers("/EVRental/**", "/**.jpg", "/**.jpeg", "/**.png").permitAll()
 
-    .requestMatchers(HttpMethod.POST, "/users").permitAll()
+                        //CRUD USER
+                        .requestMatchers(HttpMethod.POST, "/users").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/showallrenters").hasAnyAuthority("STAFF", "ADMIN")
+                        .requestMatchers(HttpMethod.GET, "/showallstaffs").hasAnyAuthority( "ADMIN")
+                        .requestMatchers(HttpMethod.PUT, "/updateuser").authenticated()
+                        .requestMatchers(HttpMethod.DELETE, "/deleteuser/**").hasAnyAuthority("STAFF", "ADMIN")
+                        .requestMatchers("/showpendingaccount", "/changeaccountstatus", "/showdetailofpendingaccount")
+                        .hasAnyAuthority("STAFF", "ADMIN")
 
-    .requestMatchers("/showpendingaccount", "/changeaccountstatus", "/showdetailofpendingaccount")
-    .hasAnyAuthority("STAFF", "ADMIN")
+                        .requestMatchers("/showpendingaccount", "/changeaccountstatus", "/showdetailofpendingaccount")
+                        .hasAnyAuthority("STAFF", "ADMIN")
                         .requestMatchers("/bookings/confirm", "/bookings/reject").hasAuthority("RENTER")
                         .requestMatchers("/bookings/startrental").hasAuthority("STAFF")
-    .requestMatchers("/bookings/createbooking").hasAnyAuthority("USER", "RENTER")
+                        .requestMatchers("/bookings/createbooking").hasAnyAuthority("USER", "RENTER")
                         .requestMatchers("bookings/showbookingbystatus", "bookings/showdetailbooking").hasAnyAuthority("RENTER", "STAFF", "ADMIN")
-    .requestMatchers(HttpMethod.GET, "/vehicles/showall", "/vehicles/showbyid/**").permitAll()
-    .requestMatchers(HttpMethod.POST, "/vehicles/create").hasAuthority("ADMIN")
-    .requestMatchers(HttpMethod.PUT, "/vehicles/update/**").hasAuthority("ADMIN")
-    .requestMatchers(HttpMethod.DELETE, "/vehicles/delete/**").hasAuthority("ADMIN")
-    .anyRequest().authenticated()
-)
+                        //CRUD VEHICLE
+                        .requestMatchers(HttpMethod.GET, "/veh  icles/showall", "/vehicles/showbyid/**").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/vehicles/create").hasAuthority("ADMIN")
+                        .requestMatchers(HttpMethod.PUT, "/vehicles/update/**").hasAuthority("ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/vehicles/delete/**").hasAuthority("ADMIN")
+                        .anyRequest().authenticated()
+                )
 
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()));
@@ -65,9 +74,9 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+        configuration.setAllowedOriginPatterns(List.of("*"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
